# fastapi-asyncapi

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
fastapi_asyncapi/: asyncapi.py  schema.py
